...
                                            </constraints>
                                        </imageView>
                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NEW ACTIVITY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fv7-Ku-7bd">
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="calendar" id="A7b-Bf-Le9">
                            <connections>
                                <segue destination="g9U-bX-AQn" kind="push" identifier="SelectDay" id="oCT-mF-rnI"/>
...
                                                </connections>
                                            </pickerView>
                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Project" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ziA-PK-gUK">
                                                <constraints>
                                                    <constraint firstAttribute="height" priority="999" constant="21" id="rea-ls-Dho"/>
...
                    </view>
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <navigationItem key="navigationItem" title="New Activity" id="YU8-5P-VRk">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="t8T-Fj-U2s">
                            <connections>
...
                                    <view multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EWb-eh-9Iq" customClass="GraduationView">
                                        <subviews>
                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label start" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCR-hW-ueN">
                                                <frame key="frameInset" minY="12" width="56" height="21"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Select Time" id="tCl-30-s09">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="ZuP-en-BQB">
                            <connections>
...
