...
    self.noteTextView.placeholder = @"Optional";
}

- (void)initAutoScreenshots
{
#if defined(AUTOSCREENSHOTS) || defined(DEBUG)
    self.timeButton.accessibilityLabel = @"TimeButton";
#endif
}

- (void) fillData
{
    if ([self.projects count] > 0) {
...
            self.selectedProject = self.activity.project;
            NSInteger selectedProjectIndex = [self.projects indexOfObject:self.activity.project];
            [self.pickerView selectRow:selectedProjectIndex inComponent:0 animated:NO];
            self.noteTextView.text = self.activity.note;
            [self updateTimeField];
            
            self.title = @"Edit Activity";
        }
        else {
            [self setDefaultProject];
        }
        
        // editing case -> take the currentDate from the activity
...
